--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -219,7 +219,7 @@ section.comments.disqus
   .image
     img
       width: 135px
-      height: 135px
+      //height: 135px
 
   .rating
     margin-top: 4px
