--- a/website/apps/alibrary/templates/alibrary/label/list_item_m.html
+++ b/website/apps/alibrary/templates/alibrary/label/list_item_m.html
@@ -8,10 +8,10 @@
      data-resource_uri="{{ item.get_api_url }}">
 
     <div class="list_body_item c1 image_center_bg"
-         {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 54x54 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
+         {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 54x54 upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 
         {% with object=item ct="label" %}
-            {% include "alibrary/element/_item_actions_primary.html" %}
+            {# include "alibrary/element/_item_actions_primary.html" #}
         {% endwith %}
 
     </div>
