heavy layout work

--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -39,7 +39,7 @@
 
                     <li>
                         {% if item.type %}
-                            {{ item.type }}
+                            {{ item.type|capfirst }}
                         {% endif %}&nbsp;
                         <span class="life">
                             {% if item.date_start %}&nbsp;*{{ item.date_start.year }}{% endif %}
