--- a/website/apps/alibrary/templates/alibrary/media/_list_item_foreign_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_foreign_xs.html
@@ -114,13 +114,26 @@
     </div>
 
     <!-- License -->
-
+    {% comment %}
     <div class="list_body_item c5 license {% if item.license %}{{ item.license.key }}{% endif %}">
         {% if item.license %}
-            <a href="{{ item.license.get_absolute_url }}" title="{% trans "License details" %}" class="iconset iconset-license">{{ item.license.iconset_display }}</a>
+            <a href="{{ item.license.get_absolute_url }}" title="{% trans "License details" %}"
+               class="iconset iconset-license">{{ item.license.iconset_display }}</a>
         {% else %}
             &nbsp;
         {% endif %}
+    </div>
+    {% endcomment %}
+
+    <!-- Relations -->
+    <div class="list_body_item c5 relations">
+
+        <ul class="unstyled horizontal">
+        {% for relation in item.relations.highlighted %}
+            <li><a class="skip-external" href="{{ relation.url }}" title="Show on {{ relation.get_service_display }}"><i class="icon icon-{{ relation.service }}"></i></a></li>
+	    {% endfor %}
+        </ul>
+
     </div>
 
 
