--- a/website/apps/alibrary/templates/alibrary/media_list.html
+++ b/website/apps/alibrary/templates/alibrary/media_list.html
@@ -109,7 +109,7 @@
                        style="display: block;">{% trans "Duration" %}</a>
                 </div>
                 <div class="list_header_item c5">
-                    {% trans "License" %}
+                    {% trans "Links" %}
                 </div>
 
                 <div class="list_header_item c6">
