--- a/website/apps/alibrary/templates/alibrary/release_detail.html
+++ b/website/apps/alibrary/templates/alibrary/release_detail.html
@@ -19,6 +19,11 @@
     {% addtoblock "js-post" %}
         <script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
 
+    <!-- jqplot - TODO: maybe move to include -->
+    {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}alibrary/js/statistics.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-uncompressed" %}<script src="{{ STATIC_URL }}js/lib/flot-0.8.3/jquery.flot.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-uncompressed" %}<script src="{{ STATIC_URL }}js/lib/flot-0.8.3/jquery.flot.time.js"></script>{% endaddtoblock %}
+
     {% addtoblock "js-post" %}
         <script>
             var list_edit = list_edit || {};
@@ -29,6 +34,18 @@
                 exporter = new ExporterApp();
                 exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
                 exporter.init();
+
+                // initialize stats app
+                var stats = new StatisticApp;
+                stats.resource_uri = '{{ object.get_api_url }}';
+                stats.init();
+
+                // trigger to actually _load_ the stats
+                $('a[data-toggle="tab"]').on('shown', function (e) {
+                    if($(e.target).attr('href') == '#statistics') {
+                        stats.show();
+                    }
+                })
             });
         </script>
     {% endaddtoblock %}
@@ -81,11 +98,9 @@
                 <li>
                     <a href="#history" data-toggle="tab">{% trans "Edit History" %}</a>
                 </li>
-                <!--
                 <li>
                     <a href="#statistics" data-toggle="tab">{% trans "Statistics" %}</a>
                 </li>
-                -->
 
             </ul>
         </div>
@@ -145,24 +160,23 @@
                 </div>
 
 
-                {% comment %}
                 <div class="tab-pane" id="statistics">
 
                     <section class="statistics">
 
                         <h2>{% trans "Statistics" %}</h2>
-                        {% for item in object.get_media %}
-                            <div class="clear clearfix"><span><a href="{{ item.get_absolute_url }}">{{ item.name }}</a></span></div>
-                            <ul class="horizontal unstyled" style="padding-bottom: 17px">
-                            {% stats_for_object item %}
-                            <li class="clear"></li>
-                            </ul>
-                        {% endfor %}
+
+                        <div id="statistics_container" style="min-height: 240px;">
+                            <div class="message">{% trans "Loading statistics" %}</div>
+                            <!-- dynamic content -->
+                        </div>
+                        <div class="choices-container">
+                            <ul class="unstyled pull-right" id="plot_choices"></ul>
+                        </div>
 
                     </section>
 
                 </div>
-                {% endcomment %}
 
 
                 <div class="tab-pane" id="broadcasts">
