--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -217,11 +217,27 @@ section.comments.disqus
 
 
   .image
+    text-align: right
+    height: 170px
+
+    .align
+      display: inline-block
+      height: 100%
+      vertical-align: middle
+      a, img
+        vertical-align: middle
+        width: 170px
+        max-height: 170px
+
     img
-      width: 135px
+      //padding-right: 14px
+      //vertical-align: middle
+      width: 170px
+      max-height: 170px
       //height: 135px
 
   .rating
+    //padding-right: 14px
     margin-top: 4px
 
   h2
