--- a/website/site-static/sass/element/_style.sass
+++ b/website/site-static/sass/element/_style.sass
@@ -12,7 +12,7 @@ $footer_fix-height: 20px
     float: left
     clear: left
     width: 120px
-    text-align: right
+    //text-align: right
 
   dd
     margin-left: 130px
