--- a/website/apps/alibrary/templates/alibrary/release/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/release/_detail_info.html
@@ -1,10 +1,10 @@
 {% load truncate i18n thumbnail arating_tags alibrary_tags spacify_tags %}
 
-<div class="span7 padded-h container_content">
+<div class="span6 padded-h container_content">
 
 <div class="page-header">
     <h2>{{ object.name|truncate_chars_inner:40 }}
-        <small>{{ object.get_releasetype_display }}</small>
+        <small>{{ object.get_releasetype_display }}{% if object.release_country %} ({{ object.release_country.iso2_code }}){% endif %}</small>
     </h2>
 </div>
 
@@ -64,10 +64,13 @@
 		{% endif %}
 		-->
 
-    {% if object.releasedate_approx %}
-        <dt>{% trans "Released" %}:</dt>
+    {% if object.is_promotional %}
+        <dt>{% trans "Release Date" %}:</dt>
+        <dd>{{ object.releasedate|date:"SHORT_DATE_FORMAT" }} ({% trans "Promo release" %})</dd>
+    {% else %}{% if object.releasedate_approx %}
+        <dt>{% trans "Release Date" %}:</dt>
         <dd>{{ object.releasedate_approx }}</dd>
-    {% endif %}
+    {% endif %}{% endif %}
 
     <!--
 		{% if object.publish_date %}
@@ -191,12 +194,13 @@
             <span class="value"><a href="{{ object.creator.get_absolute_url }}">{{ object.creator }}</a></span> |
         {% endif %}
 
-
+        {% comment %}
         {% if object.get_last_revision %}
             <span class="key">{% trans "Last edit by" %}:</span><span class="value"><a
                 href="{{ object.get_last_revision.user.get_profile.get_absolute_url }}">{{ object.get_last_revision.user }}</a></span>
             |
         {% endif %}
+        {% endcomment %}
 
         <!---->
 
@@ -242,12 +246,12 @@
 </div>
 
 
-<div class="span2 padded-h padded-v">
+<div class="span3 padded-h padded-v">
 
     <div class="image">
         {% if object.main_image %}
             <a href="{% thumbnail object.main_image 1200x1200 crop upscale %}" class="zoomable cboxElement"> <img
-                    src="{% thumbnail object.main_image 172x172 crop upscale subject_location=object.main_image.subject_location %}"
+                    src="{% thumbnail object.main_image 170x170 crop upscale subject_location=object.main_image.subject_location %}"
                     alt="Cover"/> </a>
         {% else %}
             <img src="/static/img/base/defaults/listview.release.xl.png" alt="{% trans "No cover available" %}"/>
