--- a/website/apps/alibrary/templates/alibrary/release/list_item_m.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_m.html
@@ -13,6 +13,7 @@
 		<ul class="unstyled">
 			<li class="bold">
 				<a href="{{ item.get_absolute_url }}" title="{{ item.name }}"> {{ item.name|truncate_chars_inner:24 }}
+                {% if item.release_country %}({{ item.release_country.iso2_code }}){% endif %}
 				{% topflop_for_object item %} </a>
 			</li>
 			<li>
