--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -861,13 +861,13 @@
       // height with animation
       height: 235px
       // height always open
-      height: 275px
+      height: 278px
 
       background-repeat: no-repeat
       overflow: hidden
       border-bottom: 1px solid #DDDDDD
 
-      background-color: #333
+      //background-color: #333
 
       position: relative
 	  
