--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -10,9 +10,11 @@
     <div class="list_body_item c1 image_center_bg"
          {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 36x36 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 
+        {% if item.get_media.count > 0 %}
         {% with object=item ct="release" %}
             {% include "alibrary/element/_item_actions_primary.html" %}
         {% endwith %}
+        {% endif %}
 
     </div>
     <div class="list_body_item c2">
